# Medixor

./: .gitignore  AUDIT_IMPROVEMENTS.md  AUTHENTICATION-COMPLETE.md  AUTO-PRELOAD-FEATURE.md  BUILD_TROUBLESHOOTING.md  DATABASE_MIGRATIONS.md  DOCTOR_TARGET_SYSTEM.md  FILTER-ERROR-FIX.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_ROADMAP.md  INSTALLATION.md  MEDRELIEF-ONBOARDING.md  MIGRATION_RESPONSE.md  OFFLINE-FIX-NOTES.md  PAIN_POINTS_REFERENCE.md  QUICK_FIX_GUIDE.md  SCHEME_IMPLEMENTATION_GUIDE.md  SECURITY-FIX-SUMMARY.md  SECURITY.md  Start Medixor.bat  Start-Medixor.ps1  TAURI_ARCHITECTURE.md  UPDATE_STRATEGY.md  USER_GUIDE.md  UX_ANALYSIS.md  VALIDATION_TEST_GUIDE.md  next.config.ts  package-lock.json  package.json
.github/workflows/: build.yml
electron/: main-offline.js  main-simple-offline.js  main-simple.js  main.js  offline.html  preload.js
scripts/: add-medrelief-tenant.ts  build-electron.js  check-users.ts  clean-build.sh  seed.ts  setup-demo-users.ts
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  sync_engine.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: bulk-import-items-dialog.tsx  bulk-parser-demo.tsx  doctor-should-sell-calculator.tsx  error-boundary.tsx  login-form.tsx  providers.tsx  search-modal.tsx  sidebar-nav.tsx  tenant-shell.tsx  top-header.tsx
src/docs/: BULK_PARSER_COMPLETE_GUIDE.md
src/hooks/: useLocalData.ts  useOnlineStatus.ts
src/lib/: api-client.ts  api-fetch.ts  auth-helpers.ts  batch-logic.ts  bulk-item-parser.ts  db.ts  (+16 more)
supabase/: enable-rls.sql  schema.sql
(+67 files in other folders)
