[package]
name = "medixor"
version = "1.0.0"
description = "Pharmaceutical inventory management system"
authors = ["Medixor Team"]
license = ""
repository = ""
edition = "2021"

[features]
default = []
custom-protocol = []

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"

[[bin]]
name = "medixor"
path = "src/main.rs"
